package Nature;

public class Nature {
    public static void natureSpawner(){
        //jakis randomowy spawn na mapie
    }
}
