package Nature;

import Nature.Nature;

public class Stone extends Nature {
    public Stone(){
        //konstruktor na kamulca
    }
}
