@startuml
'https://plantuml.com/class-diagram

package "Unit"{
class Unit
class Knight
class Pikeman
class Swordsman
}
package "Nature"{
class Nature
class Stone
}
package "Team"{
class Team
class Blue
class Red
}
class MainFrame{
+ArrayList<Knight>
+Arraylist<Swordsman>
+ArrayList<Pikeman>
main():void
paint(Graphics):void
+MainFrame()
}

Knight <|-- Unit
Pikeman <|-- Unit
Swordsman <|-- Unit

Stone <|-- Nature

Blue <|-- Team
Red <|-- Team

class Unit{
+x:int
+y:int
+status:int
collision():void
getBounds():Rectangle
+Unit()
}
class Knight{
+vxK:int
+vyK:int
paintK():void
getMoveKnight():void
+Knight()
}
class Pikeman{
+vxP:int
+vyP:int
paintP():void
getMovePikeman():void
+Pikeman()
}
class Swordsman{
+vxS:int
+vyS:int
paintS():void
getMoveSwordsman():void
+Swordsman()
}

class Nature{
natureSpawner():void
}
class Stone{
}

class Team{
teamAssigner():void
}
class Blue{
}
class Red{
}

@enduml